src/App.scss
/* variables */
$text-color: #333;
$bg-color: #f1f1f1;
$light-color: #fff;
$dark-color: #000;

 $ff-primary: 'Poppins', sans-serif;

html, body, #root {
  font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
  height: 100%;
}

.home {
  height:100%;
  overflow: auto;
  background-color: $text-color;
  background-repeat: no-repeat;

  h1{
    padding-top: 80px;
    text-align: center;
    color: $light-color;
  }
  div{
    text-align: center;
  }

  span{
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: $light-color;
  }

  &__card-container {
    color:$text-color
  }

  &__white_div {
    text-align: center;
    color: $light-color;
  }

  &__qrcode {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 30px;
    padding-bottom: 40px;
    
    h2{
      text-align: center;
      color: $light-color;
    }

    img{
      border-radius: 10%;
      padding-left: 0px;
    }
  }
}

@keyframes cardflip {
  from {
    transform: rotateY(180deg);
  }
  to {
    transform: rotateY(0deg);
  }
}

@keyframes cardappear {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
}

@keyframes cardTitleAndActionsAppear {
  0% {
    opacity: 0;
  }
  60% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.dialog {
  height: 200px;
  width: 150px;
  margin-left: auto;
  margin-right: auto;
  border: 1px solid grey;
  animation: cardflip 4s ease;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  &_title {
    animation: cardTitleAndActionsAppear 5s ease;
  }

  &_content {
    animation: cardappear 4s;
  }

  &_actions {
    animation: cardTitleAndActionsAppear 5s ease;
  }
}

#card_text {
  color: $text-color;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;  
  overflow: hidden;
}

#leaderboard_text {
  color: $text-color
}

#factButton:disabled {
  color: white;
  background-color: rgb(139, 139, 139);
}

